# DGFit

./: .gitignore  .readthedocs.yml  .rtd-environment.yml  .travis.yml  DGFit.py  DustGrains.py  DustModel.py  MANIFEST.in  ObsData.py  README.md  README.rst  plot_DGFit.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tox-tests.yml
DGFit/: DGFit.py  DGFit_Models.py  DMhelpers.py  DustGrains.py  DustModel.py  ObsData.py  __init__.py  drainesizedist.py  plot_DGFit.py  plot_DustGrains.py  plot_DustModel.py  plot_ObsData.py  plot_samples.py  run_DGFit.py
DGFit/data/: README.rst
DGFit/data_mw_rv31/: Gal_composite_spectrum.xcat
DGFit/misc/: calc_abund_from_dep.py
DGFit/old/: ObsData_Azv18.py  ObsData_files.py  min_not_working.py
DGFit/tests/: test_MRN.py
dgfit/: dustgrains.py  dustmodel.py  obsdata.py  plot_dgfit.py  plot_dustgrains.py  plot_dustgrains_alav.py  plot_dustmodel.py  plot_effsize.py  plot_obsdata.py  plot_samples.py  run_dgfit.py
dgfit/data/mw_rv31/: dgfit_test_WD_sizedist_best_optimizer.fits
dgfit/misc/: calc_abund_from_dep.py
dgfit/old/: min_not_working.py  plot_dustmodel.py
dgfit/plotting/: plot_ISRF_emission.py  plot_Q.py  plot_albedo.py  plot_dgfit.py  plot_dustgrains.py  plot_dustgrains_alav.py  plot_effsize.py  plot_emission.py  plot_extinction.py  plot_g.py  plot_obsdata.py  plot_property.py  plot_rv.py  plot_samples.py  plot_singlegrain_props.py  plot_sizedist.py  plot_sizedisttype.py  plot_wavelength.py
dgfit/tests/: test_MRN.py
docs/: conf.py  index.rst
docs/DGFit/: reference_api.rst  running_dgfit.rst  size_distributions.rst
docs/dgfit/: dustgrain_props.rst  install.rst  obsdata.rst  plot_results.rst  running_dgfit.rst  size_distributions.rst
licenses/: LICENSE.rst
