[metadata]
name = dgfit
author = Karl Gordon
author_email = kgordon@stsci.edu
license = BSD 3-Clause
license_files = licenses/LICENSE.rst
url = https://dgfit.readthedocs.io
description = Dust Grain Fitter
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = karllark/DGFit

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    scipy
    matplotlib
    emcee
    corner


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
dgfit = data/*

[tool:pytest]
testpaths = "dgfit" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[options.entry_points]
console_scripts =
    run_dgfit = dgfit.run_dgfit:main
    plot_dgfit = dgfit.plotting.plot_dgfit:main
    #plot_dustmodel = dgfit.plotting.plot_dustmodel:main
    plot_dustgrains = dgfit.plotting.plot_dustgrains:main
    plot_dustgrains_alav = dgfit.plotting.plot_dustgrains_alav:main
    plot_effsize = dgfit.plotting.plot_effsize:main
    plot_obsdata = dgfit.plotting.plot_obsdata:main
    plot_samples = dgfit.plotting.plot_samples:main

[coverage:run]
omit =
    dgfit/_astropy_init*
    dgfit/conftest.py
    dgfit/*setup_package*
    dgfit/tests/*
    dgfit/*/tests/*
    dgfit/extern/*
    dgfit/version*
    */dgfit/_astropy_init*
    */dgfit/conftest.py
    */dgfit/*setup_package*
    */dgfit/tests/*
    */dgfit/*/tests/*
    */dgfit/extern/*
    */dgfit/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
exclude = sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
ignore = E203, E501, W503

[pycodestyle]
exclude = sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
ignore = E203, E501, W503
